--- a/src/app/pages/country-details/country-details.component.html
+++ b/src/app/pages/country-details/country-details.component.html
@@ -33,7 +33,7 @@
           </div>
 
           <header class="details__header">
-            <h1 class="details__title">{{ view.countryName }}</h1>
+            <h1 class="details__title page-title">{{ view.countryName }}</h1>
             <div class="details__metrics">
               <article class="metric">
                 <span class="metric__label">Number of entries</span>
