--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
   <section class="dashboard">
     <header class="dashboard__header">
       <div>
-        <h1 class="dashboard__title">Medals per Country</h1>
+        <h1 class="dashboard__title page-title">Medals per Country</h1>
       </div>
       <div class="dashboard__stats">
         <div class="stat-card">
